fix grid alignment

--- a/src/assets/scss/datatablecomponent/index.scss
+++ b/src/assets/scss/datatablecomponent/index.scss
@@ -9,8 +9,16 @@
 .datatable-row {
     cursor: pointer; 
     border-bottom: 2px solid $basic-light-gray;
+    display: flex;
+    justify-content: center;
     :nth-child(2) {
+        display: block;
         flex: 2
+    }
+    :nth-child(4) {
+        .dtableCols {
+            text-align: center;
+        }
     }
     &:hover {
         background-color: $basic-background-color;
@@ -23,7 +31,7 @@
     background-color: $basic-background-color;
 }
 .dtableCols {
-    width: 100%;
+    // width: 100%;
     // height: 100%;
     // margin-top: 16px;
     img {
@@ -45,12 +53,21 @@
         border-bottom: 2px solid $basic-light-gray;
     }
     :first-child {
-        padding-left: 16px !important;
+        // padding-left: 16px !important;
         min-width: 112px;
+        display: flex;
+        justify-content: center;
     }
     :nth-child(2) {
-        flex: 2
+        flex: 2;
+        display: block;
     }    
+}
+
+.status-tag {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 //Status
